Bug 313874 - Category filter buttons "Income" & "Expense" don't work properly in Report configuration
Summary: Category filter buttons "Income" & "Expense" don't work properly in Report co...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.6.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 322548 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-25 10:22 UTC by Nick Elliott
Modified: 2013-07-18 20:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nick Elliott 2013-01-25 10:22:22 UTC
When customising a report the Category tab provides 4 selection buttons:

All
Income
Expense
None

The "All" and "None" buttons work as expected however the "Income" and "Expense" buttons do not.

The "Income" button only selects top-level income categories and none of the income sub-accounts.

Clicking the "Expense" button does select all the expense categories and sub-accounts HOWEVER it also selects all of the income sub-accounts (but not the top-level income categories).

Reproducible: Always

Steps to Reproduce:
1. Open a report e.g. Income and Expenses by Year
2. Click "Configure" and select the "Category" tab
3. Click the "Income" button
4. Click the "Expense" button
Actual Results:  
As described in the Details section above

Expected Results:  
Clicking the "Income" button should select all Income categories and Income sub-accounts, it should also de-select all Expense categories and Expense sub-accounts.

Clicking the "Expense" button should perform the reverse of clicking the "Income" button.
Comment 1 Cristian Oneț 2013-01-26 09:38:26 UTC
Git commit 7a09b9a12368e39a7a1958989e36f5356e9b6278 by Cristian Oneț.
Committed on 26/01/2013 at 10:36.
Pushed by conet into branch 'master'.

Fix the category selection actions in the find transactions dialog.
Call 'selectAllSubItems' only for the root category items.

M  +1    -1    kmymoney/widgets/kmymoneyaccountselector.cpp

http://commits.kde.org/kmymoney/7a09b9a12368e39a7a1958989e36f5356e9b6278
Comment 2 Cristian Oneț 2013-01-26 09:39:15 UTC
Git commit ac6d1aee2d79103f538a57df7253ecca339a35eb by Cristian Oneț.
Committed on 26/01/2013 at 10:36.
Pushed by conet into branch '4.6'.

Fix the category selection actions in the find transactions dialog.
Call 'selectAllSubItems' only for the root category items.
(cherry picked from commit 7a09b9a12368e39a7a1958989e36f5356e9b6278)

M  +1    -1    kmymoney/widgets/kmymoneyaccountselector.cpp

http://commits.kde.org/kmymoney/ac6d1aee2d79103f538a57df7253ecca339a35eb
Comment 3 spm0098 2013-07-18 20:34:22 UTC
*** Bug 322548 has been marked as a duplicate of this bug. ***