Fix the category selection actions in the find transactions dialog. Call 'selectAllSubItems' only for the root category items.

BUG: 313874